--- a/src/app/work/projects/fulmuri-gram-app.mdx
+++ b/src/app/work/projects/fulmuri-gram-app.mdx
@@ -10,7 +10,7 @@ team:
     role: "Web & Android App Developer"
     avatar: "/images/avatar.jpg"
     linkedIn: ""
-link: ""
+link: "https://FulmuriGram.site"
 ---
 
 ## Overview
