--- a/src/app/work/projects/fulmuri-gram-app.mdx
+++ b/src/app/work/projects/fulmuri-gram-app.mdx
@@ -2,9 +2,9 @@
 title: "ফুলমুড়ী গ্রাম (Fulmuri Gram App)"
 publishedAt: "2026-02-10"
 summary: "A community app for my village with news, notices, local directory, events, gallery, and admin updates."
+image: "/images/fulmurigram project.jpg"
 images:
-  - "/images/projects/project-01/cover-01.jpg"
-  - "/images/projects/project-01/cover-02.jpg"
+  - "/images/fulmurigram project.jpg"
 team:
   - name: "Saiful"
     role: "Web & Android App Developer"
