Update published date and app type in Fulmuri Gram App

--- a/src/app/work/projects/fulmuri-gram-app.mdx
+++ b/src/app/work/projects/fulmuri-gram-app.mdx
@@ -1,6 +1,6 @@
 ---
 title: "ফুলমুড়ী গ্রাম (Fulmuri Gram App)"
-publishedAt: "2026-02-10"
+publishedAt: "2025-06-10"
 summary: "A community app for my village with news, notices, local directory, events, gallery, and admin updates."
 image: "/images/fulmurigram project.jpg"
 images:
@@ -15,7 +15,7 @@ link: "https://FulmuriGram.site"
 
 ## Overview
 
-A practical Android app built for my village community. The goal is simple: make important local information easy to access and manage without hype or complexity.
+A practical Web app built for my village community. The goal is simple: make important local information easy to access and manage without hype or complexity.
 
 ## Features
 
