Correct image array formatting in project file
Fixed formatting of images array in fulmuri-gram-app.mdx

--- a/src/app/work/projects/fulmuri-gram-app.mdx
+++ b/src/app/work/projects/fulmuri-gram-app.mdx
@@ -4,8 +4,8 @@ publishedAt: "2025-06-10"
 summary: "A community app for my village with news, notices, local directory, events, gallery, and admin updates."
 image: "/images/fulmurigram project.jpg"
 images:
-  - "/images/fulmurigram project.jpg"
-"/images/Screenshot_20260214-133526125 (1).jpg"
+  - "/images/fulmurigram project.jpg,
+/images/Screenshot_20260214-133526125 (1).jpg"
 team:
   - name: "Saiful"
     role: "Web & Android App Developer"
