--- a/src/app/work/projects/fulmuri-gram-app.mdx
+++ b/src/app/work/projects/fulmuri-gram-app.mdx
@@ -5,7 +5,8 @@ summary: "A community app for my village with news, notices, local directory, ev
 image: "/images/fulmurigram project.jpg"
 images:
   - "/images/fulmurigram project.jpg,"
-images:"/images/Screenshot_20260214-133526125 (1).jpg"
+images:
+- "/images/Screenshot_20260214-133526125 (1).jpg"
 team:
   - name: "Saiful"
     role: "Web & Android App Developer"
