--- a/src/app/work/projects/fulmuri-gram-app.mdx
+++ b/src/app/work/projects/fulmuri-gram-app.mdx
@@ -3,7 +3,7 @@ title: "ফুলমুড়ী গ্রাম (Fulmuri Gram App)"
 publishedAt: "2025-06-10"
 summary: "A community app for my village with news, notices, local directory, events, gallery, and admin updates."
 images:
-  - "/images/fulmurigram project.jpg,"
+  - "/images/fulmurigram project.jpg"
 team:
   - name: "Saiful"
     role: "Web & Android App Developer"
